fixed overflow bug

--- a/src/styles/_media-querries.scss
+++ b/src/styles/_media-querries.scss
@@ -125,8 +125,14 @@
 @media screen and (min-width: 1024px) {
     // Header
     header {
+        width: 100%;
+
+        .header-content {
+            width: 100%;
+        }
         #header-image-box {
             padding-bottom: 500px;
+            width: 99.2vw;  
         }
 
         h1 {
@@ -134,6 +140,8 @@
         }
 
         #header-box {
+            width: 100%;
+            
             nav {
                 position: relative;
 
@@ -196,5 +204,11 @@
                 }
             }
         }
+    }
+
+    // Footer 
+
+    footer {
+        width: 100%;
     }
 }
