--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -406,11 +406,21 @@ footer p:nth-child(1) {
   }
 }
 @media screen and (min-width: 1024px) {
+  header {
+    width: 100%;
+  }
+  header .header-content {
+    width: 100%;
+  }
   header #header-image-box {
     padding-bottom: 500px;
+    width: 99.2vw;
   }
   header h1 {
     margin-left: 25px;
+  }
+  header #header-box {
+    width: 100%;
   }
   header #header-box nav {
     position: relative;
@@ -457,6 +467,9 @@ footer p:nth-child(1) {
   #contact-container form fieldset input[type=email],
   #contact-container form fieldset textarea {
     width: 800px;
+  }
+  footer {
+    width: 100%;
   }
 }
 body {
